app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-svc
spec:
  selector:
    app: node-hello
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
